Clean codesmells, refactor of exceptions