@@ -1,20 +1,19 @@
 package me.renedo.espublico.orders.domain;
 
 import java.security.SecureRandom;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class PageOfOrdersMother {
 
-    private final static SecureRandom RANDOM = new SecureRandom();
+    private static final SecureRandom RANDOM = new SecureRandom();
 
     public static PageOfOrders anyWithNextUrl(int elements) {
-        return new PageOfOrders(RANDOM.nextInt(), IntStream.range(0, elements).mapToObj(i -> OrderMother.any()).collect(Collectors.toList()),
+        return new PageOfOrders(RANDOM.nextInt(), IntStream.range(0, elements).mapToObj(i -> OrderMother.any()).toList(),
                 "some-url");
     }
 
     public static PageOfOrders anyWithNoNextUrl(int elements) {
-        return new PageOfOrders(RANDOM.nextInt(), IntStream.range(0, elements).mapToObj(i -> OrderMother.any()).collect(Collectors.toList()), null);
+        return new PageOfOrders(RANDOM.nextInt(), IntStream.range(0, elements).mapToObj(i -> OrderMother.any()).toList(), null);
     }
 
 }
